# pgapp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
apps/admin-ui/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
apps/admin-ui/src/: App.test.tsx  App.tsx  styles.css
apps/admin-ui/uiux/: admin-ui-modern-red-dashboard.html  admin-ui-modern-red-dashboard.html.artifact.json
crates/pgapp-core/: Cargo.toml
crates/pgapp-core/src/: admin.rs  cache.rs  client_auth.rs  config.rs  config_center.rs  db.rs  error.rs  lib.rs  listen.rs  metrics.rs  mq.rs  validation.rs
crates/pgapp-core/tests/: db_integration.rs
crates/pgapp-proto/: Cargo.toml  build.rs
crates/pgapp-proto/src/: lib.rs
crates/pgapp-proto/tests/: proto_contract.rs
crates/pgapp-server/: Cargo.toml
crates/pgapp-server/src/: admin_http.rs  auth.rs  lib.rs  main.rs
crates/pgapp-server/tests/: admin_integration.rs  grpc_integration.rs
docs/: admin-ui.md  auth.md  config-center.md  dlq.md  limitations.md  local-deployment.md  mq-semantics.md  schema-rollback.md  tdd.md
examples/: go_cache_mq.go  python_cache_mq.py  rust_cache_mq.rs
migrations/: 0001_cache.sql  0002_mq.sql  0003_admin.sql  0004_config.sql  0005_dlq.sql  0006_auth.sql  0007_config_schema.sql
openspec/changes/add-admin-ui/: design.md  proposal.md  tasks.md
openspec/changes/add-admin-ui/specs/admin-ui/: spec.md
openspec/changes/add-config-center/: design.md
openspec/changes/archive/2026-05-25-implement-phase-one-cache-mq-server-sdk/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-25-implement-phase-one-cache-mq-server-sdk/specs/cache-service/: spec.md
openspec/changes/archive/2026-05-25-implement-phase-one-cache-mq-server-sdk/specs/mq-service/: spec.md
openspec/changes/archive/2026-05-25-implement-phase-one-cache-mq-server-sdk/specs/multi-language-sdk/: spec.md
openspec/changes/archive/2026-05-25-implement-phase-one-cache-mq-server-sdk/specs/server-runtime/: spec.md
openspec/changes/archive/2026-06-03-add-admin-ui/: tasks.md
openspec/changes/archive/2026-06-03-add-admin-ui/specs/admin-ui/: spec.md
openspec/changes/archive/2026-06-03-add-config-center/: proposal.md  tasks.md
openspec/changes/archive/2026-06-03-add-config-center/specs/config-center/: spec.md
openspec/changes/archive/2026-06-03-add-phase-two-features/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-add-phase-two-features/specs/cache-atomic-operations/: spec.md
openspec/changes/archive/2026-06-03-add-phase-two-features/specs/cache-service/: spec.md
openspec/changes/archive/2026-06-03-add-phase-two-features/specs/config-json-schema-validation/: spec.md
openspec/changes/archive/2026-06-03-add-phase-two-features/specs/grpc-client-authentication/: spec.md
openspec/changes/archive/2026-06-03-add-phase-two-features/specs/mq-dead-letter-queue/: spec.md
openspec/changes/archive/2026-06-03-add-phase-two-features/specs/mq-listen-notify-push/: spec.md
openspec/changes/archive/2026-06-03-add-phase-two-features/specs/mq-service/: spec.md
openspec/changes/archive/2026-06-03-add-phase-two-features/specs/multi-language-sdk/: spec.md
openspec/changes/archive/2026-06-03-add-phase-two-features/specs/server-runtime/: spec.md
openspec/changes/archive/2026-06-03-add-phase-two-features/specs/typescript-sdk/: spec.md
openspec/specs/admin-ui/: spec.md
openspec/specs/cache-atomic-operations/: spec.md
openspec/specs/cache-service/: spec.md
openspec/specs/config-center/: spec.md
openspec/specs/config-json-schema-validation/: spec.md
openspec/specs/grpc-client-authentication/: spec.md
openspec/specs/mq-dead-letter-queue/: spec.md
openspec/specs/mq-listen-notify-push/: spec.md
openspec/specs/mq-service/: spec.md
openspec/specs/multi-language-sdk/: spec.md
openspec/specs/server-runtime/: spec.md
openspec/specs/typescript-sdk/: spec.md
proto/pgapp/v1/: cache.proto  common.proto  config.proto  health.proto  mq.proto
scripts/: check-python-sdk-install.sh  check.sh  generate-proto.sh  integration.sh
sdk/go/: go.mod  go.sum
sdk/go/pgapp/: client.go
sdk/go/tests/: client_test.go  env.go  generated_test.go  live_test.go
sdk/python/: README.md  pyproject.toml
sdk/python/pgapp/: __init__.py
sdk/python/pgapp_sdk/: __init__.py  client.py
sdk/python/tests/: test_client.py  test_generated.py  test_live.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: lib.rs
sdk/rust/tests/: external_live.rs  live.rs  sdk_shape.rs
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts
