[workspace]
members = [
  "crates/pgapp-core",
  "crates/pgapp-proto",
  "crates/pgapp-server",
  "sdk/rust",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
argon2 = { version = "0.5", features = ["std"] }
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
futures = "0.3"
hex = "0.4"
jsonschema = { version = "0.46.5", default-features = false }
prost = "0.14.3"
prost-types = "0.14.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json", "uuid", "migrate"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "time"] }
tonic = "0.14.6"
tonic-prost = "0.14.6"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
