[package]
name = "pgapp-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
argon2.workspace = true
chrono.workspace = true
futures.workspace = true
hex.workspace = true
jsonschema.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true
