[package]
name = "pgapp-proto"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
protoc-bin-vendored = "3.2"
tonic-prost-build = "0.14.6"
