[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pgapp-sdk"
version = "0.1.0"
description = "Python SDK for PGApp Cache, MQ, and Config services."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "grpcio>=1.80.0",
  "protobuf>=6.33.0",
]

[project.optional-dependencies]
dev = [
  "grpcio-tools>=1.80.0",
  "mypy>=2.1.0",
  "types-grpcio>=1.0.0",
]

[dependency-groups]
dev = [
  "grpcio-tools>=1.80.0",
  "mypy>=2.1.0",
  "types-grpcio>=1.0.0",
]

[tool.uv]
package = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pgapp*", "pgapp_sdk*"]
namespaces = true

[tool.setuptools.package-data]
pgapp_sdk = ["py.typed", "gen/pgapp/v1/*.py"]
